--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-  "presets": ["env", "react"]
+  "presets": ["env", "react"],
+  "plugins": [
+    ["import", {
+      "libraryName": "antd-mobile", "style": "css"
+    }]
+  ]
 }
