--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "goudanXi",
   "license": "MIT",
   "dependencies": {
+    "antd-mobile": "^2.2.6",
     "js-cookie": "^2.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -21,6 +22,7 @@
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-import": "^1.10.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
