--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,12 @@
 {
-  "presets": ["env", "react"],
+  "presets": [
+    "react"
+  ],
   "plugins": [
+    "transform-runtime",
     ["import", {
       "libraryName": "antd-mobile", "style": "css"
     }]
+    // `style: true` 会加载 less 文件
   ]
 }
