--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "antd-mobile": "^2.2.6",
+    "classnames": "^2.2.6",
     "js-cookie": "^2.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
