--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "cross-env": "^5.1.5",
     "css-loader": "^1.0.0",
     "cssnano": "^3.10.0",
