--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cssnano": "^3.10.0",
     "eslint": "^5.4.0",
     "eslint-config-booheefe": "^1.2.3",
+    "github-markdown-css": "^2.10.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.7.2",
     "postcss-cssnext": "^3.1.0",
