--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.1.5",
     "css-loader": "^1.0.0",
     "cssnano": "^3.10.0",
@@ -37,18 +38,21 @@
     "github-markdown-css": "^2.10.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.7.2",
-    "postcss-cssnext": "^3.1.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "postcss-px-to-viewport": "^0.0.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.16.1",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open 'Google Chrome' --config ./config/webpack/webpack.config.js"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open 'Google Chrome' --config ./config/webpack/webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack/webpack.config.js",
+    "analyzer": "yarn build --plugin webpack-bundle-analyzer/lib/BundleAnalyzerPlugin"
   }
 }
